2009-05-31  vadim  <vadim@vk.crocodile.org>

	* RuleSetView.cpp (RuleSetView::contextMenu): fixed bug #2799254
	"Erratic behavior when rule is removed from the group". If user
	tried to remove a rule from the middle of a group of rules, the
	GUI behaved erratically. It showed two groups with the same name,
	each of these two groups claimed to have more rules than it really
	did. Also only one of these two groups could be collapsed at the
	time. Other weird things also happened. The fix is to not allow
	removing a rule from the rule group if the rule is in the middle.

	* newFirewallDialog.cpp (newFirewallDialog::selectedInterface):
	fixed bug #2799163: "crash on correcting an error". The GUI
	crashed if user tried to add, then delete interfaces in the new
	firewall wizard. The crash occurred when the last interface was
	deleted on the page where interfaces can be configured manually.

	* ObjectTreeView.cpp (ObjectTreeView::dragMoveEvent): fixed bug
	#2799174: "Multiple instance crashes a bug". The GUI crashed if
	user tried to drag and drop an object between two different
	running copies. Copy/Paste and Drag&Drop between separate copies
	are not supported at this time.

2009-05-29  vadim  <vadim@vk.crocodile.org>

	* newFirewallDialog.cpp (newFirewallDialog::finishClicked): better
	fix for the bug #2796760 "Display error when adding new FW with
	multiple interfaces".

2009-05-28  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::actuallyCreateObject):
	fixed bug #2797791: "Display error when duplicating an object".

	* InterfaceData.cpp (InterfaceData::guessSecurityLevel): (change
	in libfwbuilder) set security level to 0 (insecure) by
	default. This makes all interfaces of the newly created firewall
	be "external" or "insecure" unless they were assigned labels or
	addresses from the private address space in which case
	guessSecurityLevel() assigns level 100. This addresses bug
	#2796760 "Display error when adding new FW with multiple